Bug 1760353 - Fix m_waitForBodyIdsMonitor issue after bug 1759501. r=rjl

--HG--
extra : amend_source : 442b865de0044b716558e07fc22bf50321a74d9a